welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   var chemin:Boolean = false;
    avance();
    if ((getColourSol()) == Color.green) {
    	chemin = true;
    }
    return chemin;
}        



